feat(server): create authenticate endpoint
